--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@radix-ui/themes": "^3.2.1",
     "@vanilla-extract/css": "^1.17.1",
     "@vanilla-extract/vite-plugin": "^5.0.1",
+    "firebase": "^11.6.0",
+    "firebase-tools": "^14.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1"
