--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/themes": "^3.2.1",
+    "@tanstack/react-query": "^5.71.10",
     "@vanilla-extract/css": "^1.17.1",
     "@vanilla-extract/vite-plugin": "^5.0.1",
     "firebase": "^11.6.0",
