feat: 트윗 카드 디스커버리

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1",
+    "react-tweet": "^3.2.2",
     "swiper": "^11.2.6"
   },
   "devDependencies": {
