--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vanilla-extract/vite-plugin": "^5.0.1",
     "firebase": "^11.6.0",
     "firebase-tools": "^14.0.1",
+    "lodash": "^4.17.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/lodash": "^4.17.16",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
