--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.7",
     "@radix-ui/themes": "^3.2.1",
     "@tanstack/react-query": "^5.71.10",
     "@vanilla-extract/css": "^1.17.1",
@@ -21,7 +22,8 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1",
     "react-tweet": "^3.2.2",
-    "swiper": "^11.2.6"
+    "swiper": "^11.2.6",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
