--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.7",
+    "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/themes": "^3.2.1",
+    "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-query": "^5.71.10",
     "@vanilla-extract/css": "^1.17.1",
     "@vanilla-extract/vite-plugin": "^5.0.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "firebase": "^11.6.0",
     "firebase-tools": "^14.0.1",
     "lodash": "^4.17.21",
@@ -25,12 +29,15 @@
     "react-router-dom": "^7.4.1",
     "react-tweet": "^3.2.2",
     "swiper": "^11.2.6",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.18",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@trivago/prettier-plugin-sort-imports": "^6.0.1",
     "@types/lodash": "^4.17.16",
+    "@types/node": "^25.0.3",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
